[gd_scene load_steps=23 format=3 uid="uid://d3rkbjrn2bgl7"]

[ext_resource type="Texture2D" uid="uid://c8sv8718ps0on" path="res://sprites/players/copy_robot/weapons/BusterLarge.png" id="1_7bo6j"]
[ext_resource type="Script" uid="uid://ddyt8hs82gnug" path="res://scenes/objects/players/weapons/copy_robot/buster_large.gd" id="1_nh5ni"]
[ext_resource type="Shader" uid="uid://b3xb8j1icuyp" path="res://shaders/PaletteSwap.gdshader" id="2_421jd"]
[ext_resource type="Texture2D" uid="uid://dpcendcgrteye" path="res://sprites/players/copy_robot/weapons/BusterDie2.png" id="4_r84im"]
[ext_resource type="Texture2D" uid="uid://b2a6clmnuk0xd" path="res://sprites/players/copy_robot/weapons/bustermedium2.png" id="4_udoeo"]
[ext_resource type="AudioStream" uid="uid://cs2dmn3ahpbea" path="res://audio/sfx/pop.wav" id="5_gqv0c"]
[ext_resource type="AudioStream" uid="uid://mfk4w30lewvq" path="res://audio/sfx/tink.wav" id="6_7bgpv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4u3xc"]
shader = ExtResource("2_421jd")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ko0nf"]
atlas = ExtResource("1_7bo6j")
region = Rect2(0, 0, 40, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdmw4"]
atlas = ExtResource("1_7bo6j")
region = Rect2(40, 0, 40, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0d1n"]
atlas = ExtResource("1_7bo6j")
region = Rect2(80, 0, 40, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0ayf"]
atlas = ExtResource("1_7bo6j")
region = Rect2(120, 0, 40, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnl65"]
atlas = ExtResource("4_udoeo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4sqw"]
atlas = ExtResource("4_udoeo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trcnc"]
atlas = ExtResource("4_udoeo")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkinq"]
atlas = ExtResource("4_udoeo")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_udoeo"]
atlas = ExtResource("4_r84im")
region = Rect2(0, 0, 40, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcjjw"]
atlas = ExtResource("4_r84im")
region = Rect2(40, 0, 40, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqf15"]
atlas = ExtResource("4_r84im")
region = Rect2(80, 0, 40, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_r84im"]
atlas = ExtResource("4_r84im")
region = Rect2(120, 0, 40, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmmfq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko0nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdmw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0d1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0ayf")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnl65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4sqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trcnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkinq")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_udoeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcjjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqf15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r84im")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"reflect",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0hn2"]
size = Vector2(18, 18.3333)

[node name="BusterLarge" type="CharacterBody2D"]
process_mode = 1
z_index = 1
collision_layer = 8
collision_mask = 4
script = ExtResource("1_nh5ni")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_4u3xc")
sprite_frames = SubResource("SpriteFrames_tmmfq")
animation = &"reflect"
autoplay = "default"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
process_mode = 3
position = Vector2(-1.78814e-07, -1.49012e-07)
scale = Vector2(2, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
process_mode = 3
position = Vector2(0, -2.84217e-14)
scale = Vector2(2, 1.2)
shape = SubResource("RectangleShape2D_p0hn2")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gqv0c")
volume_db = -4.0
bus = &"SFX"

[node name="ReflectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7bgpv")
bus = &"SFX"

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
